--- a/sphere-collisions-struct/Makefile
+++ b/sphere-collisions-struct/Makefile
@@ -1,8 +1,8 @@
-run: detect-collisions example-data.dat
-	cat example-data.dat | ./detect-collisions
+run: detect-collisions-struct example-data.dat
+	cat example-data.dat | ./detect-collisions-struct
 
-detect-collisions: detect-collisions.o collisions_low-level.o
-	g++ -o detect-collisions *.o
+detect-collisions-struct: detect-collisions-struct.o collisions_with_struct.o
+	g++ -o detect-collisions-struct *.o
 
 clean:
-	rm -f *.o detect-collisions
+	rm -f *.o detect-collisions-struct
