--- a/sphere-collisions-struct/Makefile
+++ b/sphere-collisions-struct/Makefile
@@ -1,7 +1,6 @@
 run: detect-collisions-struct example-data.dat
 	cat example-data.dat | ./detect-collisions-struct
-
-detect-collisions-struct: detect-collisions-struct.o collisions_with_struct.o
+detect-collisions-struct: detect-collisions-struct.o collisions_with_struct.o change_sphere_positions.o
 	g++ -o detect-collisions-struct *.o
 
 clean:
