--- a/pbc-mic/Makefile
+++ b/pbc-mic/Makefile
@@ -1,7 +1,7 @@
 run: detect-collisions example-data.dat
 	./detect-collisions example-data.dat
 
-detect-collisions: detect-collisions.o sphere.o box.o
+detect-collisions: detect-collisions.o sphere.o box.o small_box.o
 	g++ -g3 -O1 -o detect-collisions *.o
 
 %.o: %.cpp
