--- a/Monte_carlo_split_box/Makefile
+++ b/Monte_carlo_split_box/Makefile
@@ -1,5 +1,5 @@
-run: detect-collisions example-data.dat
-	./detect-collisions example-data.dat
+run: detect-collisions benchmark-configuration.dat
+	./detect-collisions benchmark-configuration.dat
 
 detect-collisions: detect-collisions.o sphere.o box.o small_box.o
 	g++ -g3 -O1 -o detect-collisions *.o
