--- a/Monte_carlo_split_box/Makefile
+++ b/Monte_carlo_split_box/Makefile
@@ -5,7 +5,7 @@ detect-collisions: detect-collisions.o sphere.o box.o small_box.o
 	g++ -g3 -O1 -o detect-collisions *.o
 
 %.o: %.cpp
-	g++ -g3 -O1 -c -std=c++17 -o $@ $<
+	gcc -g3 -O1 -c -std=c++17 -o $@ $<
 
 clean:
 	rm -f *.o detect-collisions
