--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,11 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "array": "cpp",
+        "*.tcc": "cpp",
+        "unordered_map": "cpp",
+        "sstream": "cpp",
+        "utility": "cpp"
     }
 }
